# simple-kube-controller

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/: release.yml
.github/workflows/: quality.yml  release.yml
examples/: custom-reconciler.rs  dag-reconciler.rs
src/: dag.rs  lib.rs
